--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,144 +1,117 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
-@plugin 'tailwindcss-animate';
+@plugin "tailwindcss-animate";
 @plugin "tailwindcss-motion";
-
-@source '../views';
-@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 
 @custom-variant dark (&:is(.dark *));
 
-@theme {
-    --font-sans:
-        'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-
-    --radius-lg: var(--radius);
-    --radius-md: calc(var(--radius) - 2px);
-    --radius-sm: calc(var(--radius) - 4px);
-
-    --color-background: var(--background);
-    --color-foreground: var(--foreground);
-
-    --color-card: var(--card);
-    --color-card-foreground: var(--card-foreground);
-
-    --color-popover: var(--popover);
-    --color-popover-foreground: var(--popover-foreground);
-
-    --color-primary: var(--primary);
-    --color-primary-foreground: var(--primary-foreground);
-
-    --color-secondary: var(--secondary);
-    --color-secondary-foreground: var(--secondary-foreground);
-
-    --color-muted: var(--muted);
-    --color-muted-foreground: var(--muted-foreground);
-
-    --color-accent: var(--accent);
-    --color-accent-foreground: var(--accent-foreground);
-
-    --color-destructive: var(--destructive);
-    --color-destructive-foreground: var(--destructive-foreground);
-
-    --color-border: var(--border);
-    --color-input: var(--input);
-    --color-ring: var(--ring);
-
-    --color-chart-1: var(--chart-1);
-    --color-chart-2: var(--chart-2);
-    --color-chart-3: var(--chart-3);
-    --color-chart-4: var(--chart-4);
-    --color-chart-5: var(--chart-5);
-
-    --color-sidebar: var(--sidebar);
-    --color-sidebar-foreground: var(--sidebar-foreground);
-    --color-sidebar-primary: var(--sidebar-primary);
-    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
-    --color-sidebar-accent: var(--sidebar-accent);
-    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
-    --color-sidebar-border: var(--sidebar-border);
-    --color-sidebar-ring: var(--sidebar-ring);
-}
-
-/*
-  The default border color has changed to `currentColor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
-@layer base {
-    *,
-    ::after,
-    ::before,
-    ::backdrop,
-    ::file-selector-button {
-        border-color: var(--color-gray-200, currentColor);
-    }
+@theme inline {
+  --color-background: hsl(var(--background));
+  --color-foreground: hsl(var(--foreground));
+  --font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono);
+  --color-sidebar-ring: hsl(var(--sidebar-ring));
+  --color-sidebar-border: hsl(var(--sidebar-border));
+  --color-sidebar-accent-foreground: hsl(var(--sidebar-accent-foreground));
+  --color-sidebar-accent: hsl(var(--sidebar-accent));
+  --color-sidebar-primary-foreground: hsl(var(--sidebar-primary-foreground));
+  --color-sidebar-primary: hsl(var(--sidebar-primary));
+  --color-sidebar-foreground: hsl(var(--sidebar-foreground));
+  --color-sidebar: hsl(var(--sidebar));
+  --color-chart-5: hsl(var(--chart-5));
+  --color-chart-4: hsl(var(--chart-4));
+  --color-chart-3: hsl(var(--chart-3));
+  --color-chart-2: hsl(var(--chart-2));
+  --color-chart-1: hsl(var(--chart-1));
+  --color-ring: hsl(var(--ring));
+  --color-input: hsl(var(--input));
+  --color-border: hsl(var(--border));
+  --color-destructive: hsl(var(--destructive));
+  --color-accent-foreground: hsl(var(--accent-foreground));
+  --color-accent: hsl(var(--accent));
+  --color-muted-foreground: hsl(var(--muted-foreground));
+  --color-muted: hsl(var(--muted));
+  --color-secondary-foreground: hsl(var(--secondary-foreground));
+  --color-secondary: hsl(var(--secondary));
+  --color-primary-foreground: hsl(var(--primary-foreground));
+  --color-primary: hsl(var(--primary));
+  --color-popover-foreground: hsl(var(--popover-foreground));
+  --color-popover: hsl(var(--popover));
+  --color-card-foreground: hsl(var(--card-foreground));
+  --color-card: hsl(var(--card));
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
 }
 
 :root {
-    --background: hsl(229, 57%, 100%);
-    --foreground: hsl(229, 63%, 4%);
-    --muted: hsl(229, 12%, 86%);
-    --muted-foreground: hsl(229, 10%, 37%);
-    --popover: hsl(0, 0%, 99%);
-    --popover-foreground: hsl(229, 63%, 3%);
-    --card: hsl(0, 0%, 99%);
-    --card-foreground: hsl(229, 63%, 3%);
-    --border: hsl(220, 13%, 91%);
-    --input: hsl(220, 13%, 91%);
-    --primary: hsl(229, 100%, 62%);
-    --primary-foreground: hsl(0, 0%, 100%);
-    --secondary: hsl(229, 20%, 90%);
-    --secondary-foreground: hsl(229, 20%, 30%);
-    --accent: hsl(229, 28%, 85%);
-    --accent-foreground: hsl(229, 28%, 25%);
-    --destructive: hsl(3, 100%, 50%);
-    --destructive-foreground: hsl(3, 0%, 100%);
-    --ring: hsl(229, 100%, 62%);
-    --chart-1: hsl(229, 100%, 62%);
-    --chart-2: hsl(229, 20%, 90%);
-    --chart-3: hsl(229, 28%, 85%);
-    --chart-4: hsl(229, 20%, 93%);
-    --chart-5: hsl(229, 103%, 62%);
-    --radius: 0;
+  --background: 212.1 50% 95%;
+  --foreground: 212.1 2.5% 7.5%;
+  --card: 212.1 25% 95%;
+  --card-foreground: 212.1 2.5% 12.5%;
+  --popover: 212.1 50% 97.5%;
+  --popover-foreground: 212.1 97.5% 5%;
+  --primary: 212.1 88.7% 45.1%;
+  --primary-foreground: 0 0% 100%;
+  --secondary: 212.1 20% 80%;
+  --secondary-foreground: 0 0% 0%;
+  --muted: 250.1 20% 90%;
+  --muted-foreground: 212.1 2.5% 37.5%;
+  --accent: 250.1 20% 85%;
+  --accent-foreground: 212.1 2.5% 12.5%;
+  --destructive: 0 75% 40%;
+  --destructive-foreground: 212.1 2.5% 95%;
+  --border: 212.1 25% 66%;
+  --input: 212.1 25% 34%;
+  --ring: 212.1 88.7% 45.3%;
+  --radius: 0.5rem;
+  --sidebar-background: 212, 50%, 90%;
+  --sidebar-foreground: 212, 3%, 7%;
+  --sidebar-primary: 212, 89%, 41%;
+  --sidebar-primary-foreground: 0, 0%, 100%;
+  --sidebar-accent: 250, 20%, 81%;
+  --sidebar-accent-foreground: 0 0% 0%;
+  --sidebar-border: 212, 25%, 63%;
+  --sidebar-ring: 202, 98%, 45%;
 }
 
 .dark {
-    --background: hsl(229, 41%, 4%);
-    --foreground: hsl(229, 23%, 99%);
-    --muted: hsl(229, 12%, 14%);
-    --muted-foreground: hsl(229, 10%, 63%);
-    --popover: hsl(229, 41%, 5%);
-    --popover-foreground: hsl(0, 0%, 100%);
-    --card: hsl(229, 41%, 5%);
-    --card-foreground: hsl(0, 0%, 100%);
-    --border: hsl(215, 27.9%, 16.9%);
-    --input: hsl(215, 27.9%, 16.9%);
-    --primary: hsl(229, 100%, 62%);
-    --primary-foreground: hsl(0, 0%, 100%);
-    --secondary: hsl(229, 14%, 8%);
-    --secondary-foreground: hsl(229, 14%, 68%);
-    --accent: hsl(229, 23%, 17%);
-    --accent-foreground: hsl(229, 23%, 77%);
-    --destructive: hsl(3, 89%, 54%);
-    --destructive-foreground: hsl(0, 0%, 100%);
-    --ring: hsl(229, 100%, 62%);
-    --chart-1: hsl(229, 100%, 62%);
-    --chart-2: hsl(229, 14%, 8%);
-    --chart-3: hsl(229, 23%, 17%);
-    --chart-4: hsl(229, 14%, 11%);
-    --chart-5: hsl(229, 103%, 62%);
+  --background: 212.1 30% 7.5%;
+  --foreground: 212.1 2.5% 95%;
+  --card: 212.1 25% 5%;
+  --card-foreground: 212.1 2.5% 95%;
+  --popover: 212.1 30% 5%;
+  --popover-foreground: 212.1 2.5% 95%;
+  --primary: 212.1 88.7% 45.1%;
+  --primary-foreground: 0 0% 100%;
+  --secondary: 212.1 20% 15%;
+  --secondary-foreground: 0 0% 100%;
+  --muted: 250.1 20% 20%;
+  --muted-foreground: 212.1 2.5% 62.5%;
+  --accent: 250.1 20% 20%;
+  --accent-foreground: 212.1 2.5% 92.5%;
+  --destructive: 0 75% 40%;
+  --destructive-foreground: 212.1 2.5% 95%;
+  --border: 212.1 25% 34%;
+  --input: 212.1 25% 34%;
+  --ring: 212.1 88.7% 45.3%;
+  --radius: 0.5rem;
+  --sidebar-background: 212, 30%, 10%;
+  --sidebar-foreground: 212, 3%, 100%;
+  --sidebar-primary: 212, 89%, 36%;
+  --sidebar-primary-foreground: 0 0% 100%;
+  --sidebar-accent: 250, 20%, 17%;
+  --sidebar-accent-foreground: 0 0% 100%;
+  --sidebar-border: 212, 25%, 32%;
+  --sidebar-ring: 202, 98%, 45%;
 }
 
 @layer base {
-    * {
-        @apply border-border;
-    }
-
-    body {
-        @apply bg-background text-foreground;
-    }
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
