--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 @plugin "tailwindcss-animate";
 @plugin "tailwindcss-motion";
@@ -6,112 +6,109 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-  --color-background: hsl(var(--background));
-  --color-foreground: hsl(var(--foreground));
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-  --color-sidebar-ring: hsl(var(--sidebar-ring));
-  --color-sidebar-border: hsl(var(--sidebar-border));
-  --color-sidebar-accent-foreground: hsl(var(--sidebar-accent-foreground));
-  --color-sidebar-accent: hsl(var(--sidebar-accent));
-  --color-sidebar-primary-foreground: hsl(var(--sidebar-primary-foreground));
-  --color-sidebar-primary: hsl(var(--sidebar-primary));
-  --color-sidebar-foreground: hsl(var(--sidebar-foreground));
-  --color-sidebar: hsl(var(--sidebar));
-  --color-chart-5: hsl(var(--chart-5));
-  --color-chart-4: hsl(var(--chart-4));
-  --color-chart-3: hsl(var(--chart-3));
-  --color-chart-2: hsl(var(--chart-2));
-  --color-chart-1: hsl(var(--chart-1));
-  --color-ring: hsl(var(--ring));
-  --color-input: hsl(var(--input));
-  --color-border: hsl(var(--border));
-  --color-destructive: hsl(var(--destructive));
-  --color-accent-foreground: hsl(var(--accent-foreground));
-  --color-accent: hsl(var(--accent));
-  --color-muted-foreground: hsl(var(--muted-foreground));
-  --color-muted: hsl(var(--muted));
-  --color-secondary-foreground: hsl(var(--secondary-foreground));
-  --color-secondary: hsl(var(--secondary));
-  --color-primary-foreground: hsl(var(--primary-foreground));
-  --color-primary: hsl(var(--primary));
-  --color-popover-foreground: hsl(var(--popover-foreground));
-  --color-popover: hsl(var(--popover));
-  --color-card-foreground: hsl(var(--card-foreground));
-  --color-card: hsl(var(--card));
-  --radius-sm: calc(var(--radius) - 4px);
-  --radius-md: calc(var(--radius) - 2px);
-  --radius-lg: var(--radius);
-  --radius-xl: calc(var(--radius) + 4px);
+    --color-background: hsl(var(--background));
+    --color-foreground: hsl(var(--foreground));
+    --font-sans: var(--font-geist-sans);
+    --font-mono: var(--font-geist-mono);
+    --color-sidebar-ring: hsl(var(--sidebar-ring));
+    --color-sidebar-border: hsl(var(--sidebar-border));
+    --color-sidebar-accent-foreground: hsl(var(--sidebar-accent-foreground));
+    --color-sidebar-accent: hsl(var(--sidebar-accent));
+    --color-sidebar-primary-foreground: hsl(var(--sidebar-primary-foreground));
+    --color-sidebar-primary: hsl(var(--sidebar-primary));
+    --color-sidebar-foreground: hsl(var(--sidebar-foreground));
+    --color-sidebar: hsl(var(--sidebar));
+    --color-chart-5: hsl(var(--chart-5));
+    --color-chart-4: hsl(var(--chart-4));
+    --color-chart-3: hsl(var(--chart-3));
+    --color-chart-2: hsl(var(--chart-2));
+    --color-chart-1: hsl(var(--chart-1));
+    --color-ring: hsl(var(--ring));
+    --color-input: hsl(var(--input));
+    --color-border: hsl(var(--border));
+    --color-destructive: hsl(var(--destructive));
+    --color-accent-foreground: hsl(var(--accent-foreground));
+    --color-accent: hsl(var(--accent));
+    --color-muted-foreground: hsl(var(--muted-foreground));
+    --color-muted: hsl(var(--muted));
+    --color-secondary-foreground: hsl(var(--secondary-foreground));
+    --color-secondary: hsl(var(--secondary));
+    --color-primary-foreground: hsl(var(--primary-foreground));
+    --color-primary: hsl(var(--primary));
+    --color-popover-foreground: hsl(var(--popover-foreground));
+    --color-popover: hsl(var(--popover));
+    --color-card-foreground: hsl(var(--card-foreground));
+    --color-card: hsl(var(--card));
+    --radius-sm: calc(var(--radius) - 4px);
+    --radius-md: calc(var(--radius) - 2px);
+    --radius-lg: var(--radius);
+    --radius-xl: calc(var(--radius) + 4px);
 }
 
 :root {
-  --background: 212.1 50% 95%;
-  --foreground: 212.1 2.5% 7.5%;
-  --card: 212.1 25% 95%;
-  --card-foreground: 212.1 2.5% 12.5%;
-  --popover: 212.1 50% 97.5%;
-  --popover-foreground: 212.1 97.5% 5%;
-  --primary: 212.1 88.7% 45.1%;
-  --primary-foreground: 0 0% 100%;
-  --secondary: 212.1 20% 80%;
-  --secondary-foreground: 0 0% 0%;
-  --muted: 250.1 20% 90%;
-  --muted-foreground: 212.1 2.5% 37.5%;
-  --accent: 250.1 20% 85%;
-  --accent-foreground: 212.1 2.5% 12.5%;
-  --destructive: 0 75% 40%;
-  --destructive-foreground: 212.1 2.5% 95%;
-  --border: 212.1 25% 66%;
-  --input: 212.1 25% 34%;
-  --ring: 212.1 88.7% 45.3%;
-  --radius: 0.5rem;
-  --sidebar-background: 212, 50%, 90%;
-  --sidebar-foreground: 212, 3%, 7%;
-  --sidebar-primary: 212, 89%, 41%;
-  --sidebar-primary-foreground: 0, 0%, 100%;
-  --sidebar-accent: 250, 20%, 81%;
-  --sidebar-accent-foreground: 0 0% 0%;
-  --sidebar-border: 212, 25%, 63%;
-  --sidebar-ring: 202, 98%, 45%;
+    --background: 206 62% 99%;
+    --foreground: 206 74% 4%;
+    --muted: 206 18% 95%;
+    --muted-foreground: 206 4% 31%;
+    --popover: 206 62% 99%;
+    --popover-foreground: 206 74% 4%;
+    --card: 206 62% 98%;
+    --card-foreground: 206 74% 3%;
+    --border: 206 15% 90%;
+    --input: 206 15% 90%;
+    --primary: 206 85% 58%;
+    --primary-foreground: 0 0% 0%;
+    --secondary: 206 12% 83%;
+    --secondary-foreground: 206 12% 23%;
+    --accent: 206 12% 83%;
+    --accent-foreground: 206 12% 23%;
+    --destructive: 4 85% 39%;
+    --destructive-foreground: 4 85% 99%;
+    --ring: 206 85% 58%;
+    --chart-1: 206 85% 58%;
+    --chart-2: 206 12% 83%;
+    --chart-3: 206 12% 83%;
+    --chart-4: 206 12% 86%;
+    --chart-5: 206 88% 58%;
+    --radius: 0.5rem;
 }
 
 .dark {
-  --background: 212.1 30% 7.5%;
-  --foreground: 212.1 2.5% 95%;
-  --card: 212.1 25% 5%;
-  --card-foreground: 212.1 2.5% 95%;
-  --popover: 212.1 30% 5%;
-  --popover-foreground: 212.1 2.5% 95%;
-  --primary: 212.1 88.7% 45.1%;
-  --primary-foreground: 0 0% 100%;
-  --secondary: 212.1 20% 15%;
-  --secondary-foreground: 0 0% 100%;
-  --muted: 250.1 20% 20%;
-  --muted-foreground: 212.1 2.5% 62.5%;
-  --accent: 250.1 20% 20%;
-  --accent-foreground: 212.1 2.5% 92.5%;
-  --destructive: 0 75% 40%;
-  --destructive-foreground: 212.1 2.5% 95%;
-  --border: 212.1 25% 34%;
-  --input: 212.1 25% 34%;
-  --ring: 212.1 88.7% 45.3%;
-  --radius: 0.5rem;
-  --sidebar-background: 212, 30%, 10%;
-  --sidebar-foreground: 212, 3%, 100%;
-  --sidebar-primary: 212, 89%, 36%;
-  --sidebar-primary-foreground: 0 0% 100%;
-  --sidebar-accent: 250, 20%, 17%;
-  --sidebar-accent-foreground: 0 0% 100%;
-  --sidebar-border: 212, 25%, 32%;
-  --sidebar-ring: 202, 98%, 45%;
+    --background: 206 50% 2%;
+    --foreground: 206 35% 98%;
+    --muted: 206 18% 5%;
+    --muted-foreground: 206 4% 69%;
+    --popover: 206 50% 2%;
+    --popover-foreground: 206 35% 98%;
+    --card: 206 50% 3%;
+    --card-foreground: 206 35% 99%;
+    --border: 206 15% 12%;
+    --input: 206 15% 12%;
+    --primary: 206 85% 58%;
+    --primary-foreground: 0 0% 0%;
+    --secondary: 206 15% 15%;
+    --secondary-foreground: 206 15% 75%;
+    --accent: 206 15% 15%;
+    --accent-foreground: 206 15% 75%;
+    --destructive: 4 85% 56%;
+    --destructive-foreground: 0 0% 100%;
+    --ring: 206 85% 58%;
+    --chart-1: 206 85% 58%;
+    --chart-2: 206 15% 15%;
+    --chart-3: 206 15% 15%;
+    --chart-4: 206 15% 18%;
+    --chart-5: 206 88% 58%;
 }
 
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
+    * {
+        @apply border-border outline-ring/50;
+    }
+    body {
+        @apply bg-background text-foreground;
+    }
+}
+
+html {
+    @apply scroll-smooth;
 }
